# Dashboard_escolar

./: main.py  pyproject.toml
.streamlit/: config.toml
app/: Home.py
controllers/: login_controller.py
loader/: dados_alunos.xlsx
pages/: Home.py  home.py  login.py
utils/: functions.py
