[project]
name = "dashboard-escolar"
version = "0.1.0"
description = ""
authors = [
    {name = "LeoSidrim",email = "l.sidrim.dev@proton.me"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "pyxlsx (>=1.1.3,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
